syntax = "proto3";

package kv;

import "google/api/annotations.proto";

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {
  bool ok = 1;
}

message CountRequest {
  uint32 count = 1;
}

message CountResponse {
  uint32 count = 1;
}

service KV {
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/kv/{key}"
    };
  };
  rpc Set(SetRequest) returns (SetResponse) {
    option (google.api.http) = {
      put: "/kv/{key}"
      body: "*"
    };
  };
  rpc Count(CountRequest) returns (stream CountResponse) {
    option (google.api.http) = {
      get: "/count"
    };
  };
}